- week3 branch cleanup

--- a/uts-mla-nba/notebooks/kotak_sahil-24707592-week3_ensemble_model_5.ipynb
+++ b/uts-mla-nba/notebooks/kotak_sahil-24707592-week3_ensemble_model_5.ipynb
@@ -46,11 +46,11 @@
    "id": "15f0e247",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-08-31T10:16:12.832192Z",
-     "iopub.status.busy": "2023-08-31T10:16:12.831865Z",
-     "iopub.status.idle": "2023-08-31T10:16:13.151999Z",
-     "shell.execute_reply": "2023-08-31T10:16:13.151397Z",
-     "shell.execute_reply.started": "2023-08-31T10:16:12.832167Z"
+     "iopub.execute_input": "2023-09-01T10:12:33.601100Z",
+     "iopub.status.busy": "2023-09-01T10:12:33.600808Z",
+     "iopub.status.idle": "2023-09-01T10:12:33.912190Z",
+     "shell.execute_reply": "2023-09-01T10:12:33.911648Z",
+     "shell.execute_reply.started": "2023-09-01T10:12:33.601077Z"
     },
     "tags": []
    },
@@ -199,11 +199,11 @@
    "id": "67545332",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-08-31T10:16:15.004045Z",
-     "iopub.status.busy": "2023-08-31T10:16:15.003663Z",
-     "iopub.status.idle": "2023-08-31T10:16:15.529187Z",
-     "shell.execute_reply": "2023-08-31T10:16:15.528567Z",
-     "shell.execute_reply.started": "2023-08-31T10:16:15.004019Z"
+     "iopub.execute_input": "2023-09-01T10:12:36.260969Z",
+     "iopub.status.busy": "2023-09-01T10:12:36.260600Z",
+     "iopub.status.idle": "2023-09-01T10:12:36.766577Z",
+     "shell.execute_reply": "2023-09-01T10:12:36.766036Z",
+     "shell.execute_reply.started": "2023-09-01T10:12:36.260945Z"
     },
     "tags": []
    },
@@ -212,7 +212,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_24426/2529321639.py:2: DtypeWarning: Columns (26) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_2985/2529321639.py:2: DtypeWarning: Columns (26) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  train_data = pd.read_csv('../data/raw/train.csv')\n"
      ]
     },
@@ -430,11 +430,11 @@
    "id": "b49095ce-5a0a-4bc4-8f9d-a04da4aa2be0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-08-31T09:45:05.445249Z",
-     "iopub.status.busy": "2023-08-31T09:45:05.444875Z",
-     "iopub.status.idle": "2023-08-31T09:45:05.449554Z",
-     "shell.execute_reply": "2023-08-31T09:45:05.448956Z",
-     "shell.execute_reply.started": "2023-08-31T09:45:05.445223Z"
+     "iopub.execute_input": "2023-08-31T10:58:22.061370Z",
+     "iopub.status.busy": "2023-08-31T10:58:22.061102Z",
+     "iopub.status.idle": "2023-08-31T10:58:22.065119Z",
+     "shell.execute_reply": "2023-08-31T10:58:22.064603Z",
+     "shell.execute_reply.started": "2023-08-31T10:58:22.061348Z"
     },
     "tags": []
    },
@@ -468,11 +468,11 @@
    "id": "0630f56c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-08-31T03:48:29.417743Z",
-     "iopub.status.busy": "2023-08-31T03:48:29.417502Z",
-     "iopub.status.idle": "2023-08-31T03:48:29.479157Z",
-     "shell.execute_reply": "2023-08-31T03:48:29.478673Z",
-     "shell.execute_reply.started": "2023-08-31T03:48:29.417724Z"
+     "iopub.execute_input": "2023-08-31T10:58:22.066120Z",
+     "iopub.status.busy": "2023-08-31T10:58:22.065877Z",
+     "iopub.status.idle": "2023-08-31T10:58:22.129193Z",
+     "shell.execute_reply": "2023-08-31T10:58:22.128651Z",
+     "shell.execute_reply.started": "2023-08-31T10:58:22.066101Z"
     },
     "tags": []
    },
@@ -746,11 +746,11 @@
    "id": "2ad8c3ed",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-08-31T03:48:29.480875Z",
-     "iopub.status.busy": "2023-08-31T03:48:29.480636Z",
-     "iopub.status.idle": "2023-08-31T03:48:29.486401Z",
-     "shell.execute_reply": "2023-08-31T03:48:29.485932Z",
-     "shell.execute_reply.started": "2023-08-31T03:48:29.480855Z"
+     "iopub.execute_input": "2023-08-31T10:58:22.130243Z",
+     "iopub.status.busy": "2023-08-31T10:58:22.129981Z",
+     "iopub.status.idle": "2023-08-31T10:58:22.136071Z",
+     "shell.execute_reply": "2023-08-31T10:58:22.135566Z",
+     "shell.execute_reply.started": "2023-08-31T10:58:22.130224Z"
     },
     "tags": []
    },
@@ -789,11 +789,11 @@
    "id": "06f1ae71",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-08-31T03:48:29.487362Z",
-     "iopub.status.busy": "2023-08-31T03:48:29.487098Z",
-     "iopub.status.idle": "2023-08-31T03:48:29.715376Z",
-     "shell.execute_reply": "2023-08-31T03:48:29.714820Z",
-     "shell.execute_reply.started": "2023-08-31T03:48:29.487343Z"
+     "iopub.execute_input": "2023-08-31T10:58:22.137052Z",
+     "iopub.status.busy": "2023-08-31T10:58:22.136816Z",
+     "iopub.status.idle": "2023-08-31T10:58:22.369784Z",
+     "shell.execute_reply": "2023-08-31T10:58:22.369222Z",
+     "shell.execute_reply.started": "2023-08-31T10:58:22.137033Z"
     },
     "tags": []
    },
@@ -1607,11 +1607,11 @@
    "id": "96dd78c1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-08-31T03:48:29.716455Z",
-     "iopub.status.busy": "2023-08-31T03:48:29.716185Z",
-     "iopub.status.idle": "2023-08-31T03:48:30.136957Z",
-     "shell.execute_reply": "2023-08-31T03:48:30.136410Z",
-     "shell.execute_reply.started": "2023-08-31T03:48:29.716435Z"
+     "iopub.execute_input": "2023-08-31T10:58:22.372052Z",
+     "iopub.status.busy": "2023-08-31T10:58:22.371778Z",
+     "iopub.status.idle": "2023-08-31T10:58:22.803784Z",
+     "shell.execute_reply": "2023-08-31T10:58:22.803228Z",
+     "shell.execute_reply.started": "2023-08-31T10:58:22.372032Z"
     },
     "tags": []
    },
@@ -1677,11 +1677,11 @@
    "id": "a1371d6f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-08-31T03:48:30.138035Z",
-     "iopub.status.busy": "2023-08-31T03:48:30.137760Z",
-     "iopub.status.idle": "2023-08-31T03:48:31.580391Z",
-     "shell.execute_reply": "2023-08-31T03:48:31.579814Z",
-     "shell.execute_reply.started": "2023-08-31T03:48:30.138014Z"
+     "iopub.execute_input": "2023-08-31T10:58:22.804880Z",
+     "iopub.status.busy": "2023-08-31T10:58:22.804616Z",
+     "iopub.status.idle": "2023-08-31T10:58:24.281571Z",
+     "shell.execute_reply": "2023-08-31T10:58:24.280853Z",
+     "shell.execute_reply.started": "2023-08-31T10:58:22.804861Z"
     },
     "tags": []
    },
@@ -1729,11 +1729,11 @@
    "id": "6ca91bf5-235e-4fbe-81b9-1a693e1d3dca",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-08-31T10:16:19.559086Z",
-     "iopub.status.busy": "2023-08-31T10:16:19.558714Z",
-     "iopub.status.idle": "2023-08-31T10:16:19.563378Z",
-     "shell.execute_reply": "2023-08-31T10:16:19.562765Z",
-     "shell.execute_reply.started": "2023-08-31T10:16:19.559060Z"
+     "iopub.execute_input": "2023-09-01T10:12:42.837442Z",
+     "iopub.status.busy": "2023-09-01T10:12:42.837058Z",
+     "iopub.status.idle": "2023-09-01T10:12:42.841558Z",
+     "shell.execute_reply": "2023-09-01T10:12:42.841020Z",
+     "shell.execute_reply.started": "2023-09-01T10:12:42.837417Z"
     },
     "tags": []
    },
@@ -1759,11 +1759,11 @@
    "id": "95113517-fe19-4493-b99a-12ae2a3734ae",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-08-31T10:16:20.519878Z",
-     "iopub.status.busy": "2023-08-31T10:16:20.519519Z",
-     "iopub.status.idle": "2023-08-31T10:16:20.534380Z",
-     "shell.execute_reply": "2023-08-31T10:16:20.533735Z",
-     "shell.execute_reply.started": "2023-08-31T10:16:20.519855Z"
+     "iopub.execute_input": "2023-09-01T10:12:43.892134Z",
+     "iopub.status.busy": "2023-09-01T10:12:43.891744Z",
+     "iopub.status.idle": "2023-09-01T10:12:43.901885Z",
+     "shell.execute_reply": "2023-09-01T10:12:43.901296Z",
+     "shell.execute_reply.started": "2023-09-01T10:12:43.892109Z"
     },
     "tags": []
    },
@@ -1773,16 +1773,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "02b421d0-4e00-48f7-8a3d-7a9411a45e40",
+   "metadata": {},
+   "source": [
+    "- Updated the preprocessing step to preprocessing_v3"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "a71bba79-1811-4cfd-a2e0-07d5dbe0590f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-08-31T10:16:23.506974Z",
-     "iopub.status.busy": "2023-08-31T10:16:23.506598Z",
-     "iopub.status.idle": "2023-08-31T10:16:23.820899Z",
-     "shell.execute_reply": "2023-08-31T10:16:23.820184Z",
-     "shell.execute_reply.started": "2023-08-31T10:16:23.506950Z"
+     "iopub.execute_input": "2023-09-01T10:12:47.387387Z",
+     "iopub.status.busy": "2023-09-01T10:12:47.386972Z",
+     "iopub.status.idle": "2023-09-01T10:12:47.693436Z",
+     "shell.execute_reply": "2023-09-01T10:12:47.692815Z",
+     "shell.execute_reply.started": "2023-09-01T10:12:47.387361Z"
     },
     "tags": []
    },
@@ -1799,11 +1807,11 @@
    "id": "59826948-34ea-446f-9257-9edd6094b700",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-08-31T10:16:24.617963Z",
-     "iopub.status.busy": "2023-08-31T10:16:24.617585Z",
-     "iopub.status.idle": "2023-08-31T10:16:24.637323Z",
-     "shell.execute_reply": "2023-08-31T10:16:24.636723Z",
-     "shell.execute_reply.started": "2023-08-31T10:16:24.617938Z"
+     "iopub.execute_input": "2023-09-01T10:12:49.587261Z",
+     "iopub.status.busy": "2023-09-01T10:12:49.586818Z",
+     "iopub.status.idle": "2023-09-01T10:12:49.605450Z",
+     "shell.execute_reply": "2023-09-01T10:12:49.604942Z",
+     "shell.execute_reply.started": "2023-09-01T10:12:49.587233Z"
     },
     "tags": []
    },
@@ -2023,66 +2031,33 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3c95157d-2d9d-4bb4-bcd5-1e3e719113c4",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-08-31T10:16:28.111076Z",
-     "iopub.status.busy": "2023-08-31T10:16:28.110704Z",
-     "iopub.status.idle": "2023-08-31T10:16:33.741869Z",
-     "shell.execute_reply": "2023-08-31T10:16:33.741244Z",
-     "shell.execute_reply.started": "2023-08-31T10:16:28.111051Z"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/saturncloud/envs/saturn/lib/python3.9/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but IsolationForest was fitted with feature names\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
-   "source": [
-    "from features.predict_anomaly import calculate_anomaly_scores\n",
-    "\n",
-    "# Adding a new feature 'Anomaly Score' using Isolation Forest Algorithm\n",
-    "\n",
-    "columns_to_exclude = ['player_id', 'team', 'conf']\n",
-    "ready_to_train_df = calculate_anomaly_scores(preprocessed_train_data, columns_to_exclude)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "id": "d8aaf222-5488-4d96-8d0c-a334cf41941e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-08-31T10:16:59.464013Z",
-     "iopub.status.busy": "2023-08-31T10:16:59.463355Z",
-     "iopub.status.idle": "2023-08-31T10:16:59.488123Z",
-     "shell.execute_reply": "2023-08-31T10:16:59.487516Z",
-     "shell.execute_reply.started": "2023-08-31T10:16:59.463986Z"
+     "iopub.execute_input": "2023-09-01T10:12:52.463986Z",
+     "iopub.status.busy": "2023-09-01T10:12:52.463615Z",
+     "iopub.status.idle": "2023-09-01T10:12:52.476583Z",
+     "shell.execute_reply": "2023-09-01T10:12:52.476005Z",
+     "shell.execute_reply.started": "2023-09-01T10:12:52.463963Z"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "df_new = ready_to_train_df.drop(columns=\"player_id\")"
+    "df_new = preprocessed_train_data.drop(columns=\"player_id\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "498372d3-be7f-4061-9ae9-b92584c8b471",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-08-31T10:17:00.975597Z",
-     "iopub.status.busy": "2023-08-31T10:17:00.975224Z",
-     "iopub.status.idle": "2023-08-31T10:17:25.664482Z",
-     "shell.execute_reply": "2023-08-31T10:17:25.663716Z",
-     "shell.execute_reply.started": "2023-08-31T10:17:00.975573Z"
+     "iopub.execute_input": "2023-09-01T10:12:53.846163Z",
+     "iopub.status.busy": "2023-09-01T10:12:53.845782Z",
+     "iopub.status.idle": "2023-09-01T10:13:24.248711Z",
+     "shell.execute_reply": "2023-09-01T10:13:24.247971Z",
+     "shell.execute_reply.started": "2023-09-01T10:12:53.846139Z"
     },
     "tags": []
    },
@@ -2090,10 +2065,10 @@
     {
      "data": {
       "text/plain": [
-       "0.9993405275779377"
+       "0.9978916866506794"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2115,15 +2090,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "c2e735da-8fc4-41f9-a2fd-39ac27b6ccf5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-08-31T10:20:52.480429Z",
-     "iopub.status.busy": "2023-08-31T10:20:52.479782Z",
-     "iopub.status.idle": "2023-08-31T10:20:52.515693Z",
-     "shell.execute_reply": "2023-08-31T10:20:52.515078Z",
-     "shell.execute_reply.started": "2023-08-31T10:20:52.480399Z"
+     "iopub.execute_input": "2023-09-01T10:17:57.657053Z",
+     "iopub.status.busy": "2023-09-01T10:17:57.656650Z",
+     "iopub.status.idle": "2023-09-01T10:17:57.692731Z",
+     "shell.execute_reply": "2023-09-01T10:17:57.692124Z",
+     "shell.execute_reply.started": "2023-09-01T10:17:57.657029Z"
     },
     "tags": []
    },
@@ -2135,43 +2110,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "07535f01-fc03-4766-804f-7b9e1fdf6383",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-08-31T10:21:00.251911Z",
-     "iopub.status.busy": "2023-08-31T10:21:00.251529Z",
-     "iopub.status.idle": "2023-08-31T10:21:00.855725Z",
-     "shell.execute_reply": "2023-08-31T10:21:00.855083Z",
-     "shell.execute_reply.started": "2023-08-31T10:21:00.251886Z"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/saturncloud/envs/saturn/lib/python3.9/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but IsolationForest was fitted with feature names\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
-   "source": [
-    "ready_to_test_df = calculate_anomaly_scores(preprocessed_test_data, columns_to_exclude)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "a4eeb423-4212-4941-8a91-248a19707907",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-08-31T10:21:08.911965Z",
-     "iopub.status.busy": "2023-08-31T10:21:08.911582Z",
-     "iopub.status.idle": "2023-08-31T10:21:09.098445Z",
-     "shell.execute_reply": "2023-08-31T10:21:09.097599Z",
-     "shell.execute_reply.started": "2023-08-31T10:21:08.911942Z"
+     "iopub.execute_input": "2023-09-01T10:17:58.975623Z",
+     "iopub.status.busy": "2023-09-01T10:17:58.975249Z",
+     "iopub.status.idle": "2023-09-01T10:17:59.225943Z",
+     "shell.execute_reply": "2023-09-01T10:17:59.225363Z",
+     "shell.execute_reply.started": "2023-09-01T10:17:58.975595Z"
     },
     "tags": []
    },
@@ -2195,15 +2142,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "c2c6742a-3d7d-4ac3-8160-140896bebb2e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-08-31T10:21:11.478956Z",
-     "iopub.status.busy": "2023-08-31T10:21:11.478579Z",
-     "iopub.status.idle": "2023-08-31T10:21:11.486667Z",
-     "shell.execute_reply": "2023-08-31T10:21:11.485701Z",
-     "shell.execute_reply.started": "2023-08-31T10:21:11.478933Z"
+     "iopub.execute_input": "2023-09-01T10:18:00.533602Z",
+     "iopub.status.busy": "2023-09-01T10:18:00.533221Z",
+     "iopub.status.idle": "2023-09-01T10:18:00.540861Z",
+     "shell.execute_reply": "2023-09-01T10:18:00.540132Z",
+     "shell.execute_reply.started": "2023-09-01T10:18:00.533576Z"
     },
     "tags": []
    },
@@ -2237,27 +2184,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>cf302b4d-84f7-4124-a25d-a75eed31978b</td>\n",
-       "      <td>0.001379</td>\n",
+       "      <td>0.002187</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>f91837cd-4f49-4b70-963d-aeb82c6ce3da</td>\n",
-       "      <td>0.001379</td>\n",
+       "      <td>0.002187</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>53ec2a29-1e7d-4c6d-86d7-d60d02af8916</td>\n",
-       "      <td>0.001379</td>\n",
+       "      <td>0.002192</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>32402798-471c-4a54-8cb4-29cd95199014</td>\n",
-       "      <td>0.001379</td>\n",
+       "      <td>0.002191</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>73b960f9-27b8-4431-9d23-a760e9bbc360</td>\n",
-       "      <td>0.001379</td>\n",
+       "      <td>0.002201</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2265,14 +2212,14 @@
       ],
       "text/plain": [
        "                              player_id   drafted\n",
-       "0  cf302b4d-84f7-4124-a25d-a75eed31978b  0.001379\n",
-       "1  f91837cd-4f49-4b70-963d-aeb82c6ce3da  0.001379\n",
-       "2  53ec2a29-1e7d-4c6d-86d7-d60d02af8916  0.001379\n",
-       "3  32402798-471c-4a54-8cb4-29cd95199014  0.001379\n",
-       "4  73b960f9-27b8-4431-9d23-a760e9bbc360  0.001379"
+       "0  cf302b4d-84f7-4124-a25d-a75eed31978b  0.002187\n",
+       "1  f91837cd-4f49-4b70-963d-aeb82c6ce3da  0.002187\n",
+       "2  53ec2a29-1e7d-4c6d-86d7-d60d02af8916  0.002192\n",
+       "3  32402798-471c-4a54-8cb4-29cd95199014  0.002191\n",
+       "4  73b960f9-27b8-4431-9d23-a760e9bbc360  0.002201"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2283,15 +2230,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "f4893c60-3d6a-4696-8582-19a4648f8143",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-08-31T10:21:14.778247Z",
-     "iopub.status.busy": "2023-08-31T10:21:14.777866Z",
-     "iopub.status.idle": "2023-08-31T10:21:14.798476Z",
-     "shell.execute_reply": "2023-08-31T10:21:14.797953Z",
-     "shell.execute_reply.started": "2023-08-31T10:21:14.778223Z"
+     "iopub.execute_input": "2023-09-01T10:18:02.052526Z",
+     "iopub.status.busy": "2023-09-01T10:18:02.052162Z",
+     "iopub.status.idle": "2023-09-01T10:18:02.073867Z",
+     "shell.execute_reply": "2023-09-01T10:18:02.073340Z",
+     "shell.execute_reply.started": "2023-09-01T10:18:02.052499Z"
     },
     "tags": []
    },
@@ -2302,7 +2249,7 @@
        "'submission_week3_ensemblemodel_v5.csv'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
