--- a/uts-mla-nba/notebooks/kotak_sahil-24707592-week3_ensemble_model_7.ipynb
+++ b/uts-mla-nba/notebooks/kotak_sahil-24707592-week3_ensemble_model_7.ipynb
@@ -2084,12 +2084,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "498372d3-be7f-4061-9ae9-b92584c8b471",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-09-01T12:41:37.086351Z",
-     "iopub.status.busy": "2023-09-01T12:41:37.085969Z"
+     "iopub.status.busy": "2023-09-01T12:41:37.085969Z",
+     "iopub.status.idle": "2023-09-01T14:01:14.905161Z",
+     "shell.execute_reply": "2023-09-01T14:01:14.904465Z",
+     "shell.execute_reply.started": "2023-09-01T12:41:37.086323Z"
     },
     "tags": []
    },
@@ -2199,7 +2202,26 @@
       "/opt/saturncloud/envs/saturn/lib/python3.9/site-packages/sklearn/linear_model/_sag.py:352: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
       "  warnings.warn(\n",
       "/opt/saturncloud/envs/saturn/lib/python3.9/site-packages/sklearn/linear_model/_sag.py:352: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/opt/saturncloud/envs/saturn/lib/python3.9/site-packages/sklearn/linear_model/_sag.py:352: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/opt/saturncloud/envs/saturn/lib/python3.9/site-packages/sklearn/linear_model/_sag.py:352: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/opt/saturncloud/envs/saturn/lib/python3.9/site-packages/sklearn/linear_model/_sag.py:352: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/opt/saturncloud/envs/saturn/lib/python3.9/site-packages/sklearn/linear_model/_sag.py:352: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/opt/saturncloud/envs/saturn/lib/python3.9/site-packages/sklearn/linear_model/_sag.py:352: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "/opt/saturncloud/envs/saturn/lib/python3.9/site-packages/sklearn/linear_model/_sag.py:352: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
       "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stacking Classifier AUROC: 0.9988460736225214\n"
      ]
     }
    ],
@@ -2221,15 +2243,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "c2e735da-8fc4-41f9-a2fd-39ac27b6ccf5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-08-31T10:57:00.393597Z",
-     "iopub.status.busy": "2023-08-31T10:57:00.393285Z",
-     "iopub.status.idle": "2023-08-31T10:57:00.429958Z",
-     "shell.execute_reply": "2023-08-31T10:57:00.429279Z",
-     "shell.execute_reply.started": "2023-08-31T10:57:00.393577Z"
+     "iopub.execute_input": "2023-09-01T14:12:27.845304Z",
+     "iopub.status.busy": "2023-09-01T14:12:27.844907Z",
+     "iopub.status.idle": "2023-09-01T14:12:27.881498Z",
+     "shell.execute_reply": "2023-09-01T14:12:27.880808Z",
+     "shell.execute_reply.started": "2023-09-01T14:12:27.845278Z"
     },
     "tags": []
    },
@@ -2241,15 +2263,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "07535f01-fc03-4766-804f-7b9e1fdf6383",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-08-31T10:57:00.431175Z",
-     "iopub.status.busy": "2023-08-31T10:57:00.430873Z",
-     "iopub.status.idle": "2023-08-31T10:57:01.065164Z",
-     "shell.execute_reply": "2023-08-31T10:57:01.064526Z",
-     "shell.execute_reply.started": "2023-08-31T10:57:00.431154Z"
+     "iopub.execute_input": "2023-09-01T14:12:31.015611Z",
+     "iopub.status.busy": "2023-09-01T14:12:31.015216Z",
+     "iopub.status.idle": "2023-09-01T14:12:31.626721Z",
+     "shell.execute_reply": "2023-09-01T14:12:31.626029Z",
+     "shell.execute_reply.started": "2023-09-01T14:12:31.015588Z"
     },
     "tags": []
    },
@@ -2269,15 +2291,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "a4eeb423-4212-4941-8a91-248a19707907",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-08-31T10:57:01.066299Z",
-     "iopub.status.busy": "2023-08-31T10:57:01.066012Z",
-     "iopub.status.idle": "2023-08-31T10:57:01.253728Z",
-     "shell.execute_reply": "2023-08-31T10:57:01.253100Z",
-     "shell.execute_reply.started": "2023-08-31T10:57:01.066279Z"
+     "iopub.execute_input": "2023-09-01T14:18:44.258097Z",
+     "iopub.status.busy": "2023-09-01T14:18:44.257716Z",
+     "iopub.status.idle": "2023-09-01T14:18:44.529428Z",
+     "shell.execute_reply": "2023-09-01T14:18:44.528605Z",
+     "shell.execute_reply.started": "2023-09-01T14:18:44.258073Z"
     },
     "tags": []
    },
@@ -2289,27 +2311,29 @@
       "/opt/saturncloud/envs/saturn/lib/python3.9/site-packages/sklearn/preprocessing/_encoders.py:170: UserWarning: Found unknown categories in columns [0] during transform. These unknown categories will be encoded as all zeros\n",
       "  warnings.warn(\n",
       "/opt/saturncloud/envs/saturn/lib/python3.9/site-packages/sklearn/preprocessing/_encoders.py:170: UserWarning: Found unknown categories in columns [0] during transform. These unknown categories will be encoded as all zeros\n",
+      "  warnings.warn(\n",
+      "/opt/saturncloud/envs/saturn/lib/python3.9/site-packages/sklearn/preprocessing/_encoders.py:170: UserWarning: Found unknown categories in columns [0] during transform. These unknown categories will be encoded as all zeros\n",
       "  warnings.warn(\n"
      ]
     }
    ],
    "source": [
-    "from models.ensemble_v3 import generate_stacking_predictions\n",
+    "from models.ensemble_v5_predict import generate_stacking_predictions\n",
     "\n",
     "submission_stacking = generate_stacking_predictions(stacking_classifier, ready_to_test_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "c2c6742a-3d7d-4ac3-8160-140896bebb2e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-08-31T10:57:01.254927Z",
-     "iopub.status.busy": "2023-08-31T10:57:01.254648Z",
-     "iopub.status.idle": "2023-08-31T10:57:01.261403Z",
-     "shell.execute_reply": "2023-08-31T10:57:01.260878Z",
-     "shell.execute_reply.started": "2023-08-31T10:57:01.254906Z"
+     "iopub.execute_input": "2023-09-01T14:18:47.548829Z",
+     "iopub.status.busy": "2023-09-01T14:18:47.548436Z",
+     "iopub.status.idle": "2023-09-01T14:18:47.555893Z",
+     "shell.execute_reply": "2023-09-01T14:18:47.555294Z",
+     "shell.execute_reply.started": "2023-09-01T14:18:47.548804Z"
     },
     "tags": []
    },
@@ -2343,27 +2367,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>cf302b4d-84f7-4124-a25d-a75eed31978b</td>\n",
-       "      <td>0.001375</td>\n",
+       "      <td>0.000093</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>f91837cd-4f49-4b70-963d-aeb82c6ce3da</td>\n",
-       "      <td>0.001375</td>\n",
+       "      <td>0.000094</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>53ec2a29-1e7d-4c6d-86d7-d60d02af8916</td>\n",
-       "      <td>0.001375</td>\n",
+       "      <td>0.000097</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>32402798-471c-4a54-8cb4-29cd95199014</td>\n",
-       "      <td>0.001375</td>\n",
+       "      <td>0.000093</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>73b960f9-27b8-4431-9d23-a760e9bbc360</td>\n",
-       "      <td>0.001375</td>\n",
+       "      <td>0.000102</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2371,14 +2395,14 @@
       ],
       "text/plain": [
        "                              player_id   drafted\n",
-       "0  cf302b4d-84f7-4124-a25d-a75eed31978b  0.001375\n",
-       "1  f91837cd-4f49-4b70-963d-aeb82c6ce3da  0.001375\n",
-       "2  53ec2a29-1e7d-4c6d-86d7-d60d02af8916  0.001375\n",
-       "3  32402798-471c-4a54-8cb4-29cd95199014  0.001375\n",
-       "4  73b960f9-27b8-4431-9d23-a760e9bbc360  0.001375"
+       "0  cf302b4d-84f7-4124-a25d-a75eed31978b  0.000093\n",
+       "1  f91837cd-4f49-4b70-963d-aeb82c6ce3da  0.000094\n",
+       "2  53ec2a29-1e7d-4c6d-86d7-d60d02af8916  0.000097\n",
+       "3  32402798-471c-4a54-8cb4-29cd95199014  0.000093\n",
+       "4  73b960f9-27b8-4431-9d23-a760e9bbc360  0.000102"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2389,15 +2413,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "f4893c60-3d6a-4696-8582-19a4648f8143",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-08-31T10:57:01.262642Z",
-     "iopub.status.busy": "2023-08-31T10:57:01.262173Z",
-     "iopub.status.idle": "2023-08-31T10:57:01.282546Z",
-     "shell.execute_reply": "2023-08-31T10:57:01.282023Z",
-     "shell.execute_reply.started": "2023-08-31T10:57:01.262621Z"
+     "iopub.execute_input": "2023-09-01T14:18:51.515837Z",
+     "iopub.status.busy": "2023-09-01T14:18:51.515450Z",
+     "iopub.status.idle": "2023-09-01T14:18:51.536494Z",
+     "shell.execute_reply": "2023-09-01T14:18:51.535927Z",
+     "shell.execute_reply.started": "2023-09-01T14:18:51.515813Z"
     },
     "tags": []
    },
@@ -2405,10 +2429,10 @@
     {
      "data": {
       "text/plain": [
-       "'submission_week3_ensemblemodel_v6.csv'"
+       "'submission_week3_ensemblemodel_v7.csv'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
