--- a/uts-mla-nba/notebooks/kotak_sahil-24707592-week2_ensemble_model_2.ipynb
+++ b/uts-mla-nba/notebooks/kotak_sahil-24707592-week2_ensemble_model_2.ipynb
@@ -2116,7 +2116,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "saturn (Python 3)",
    "language": "python",
    "name": "python3"
   },
@@ -2130,7 +2130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
